config-root/namespaces/jx-production/leartech-website/leartech-website-leartech-website-deploy.yaml
# Source: leartech-website/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: leartech-website-leartech-website
  labels:
    draft: draft-app
    chart: "leartech-website-0.0.3"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: jx-production
  annotations:
    wave.pusher.com/update-on-config-change: 'true'
spec:
  selector:
    matchLabels:
      app: leartech-website-leartech-website
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: leartech-website-leartech-website
    spec:
      serviceAccountName: leartech-website-leartech-website
      containers:
        - name: leartech-website
          image: "gcr.io/domleartechtech/leartech-website:0.0.3"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
