config-root/namespaces/jx-production/leartech-website/leartech-website-svc.yaml
# Source: leartech-website/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: leartech-website
  labels:
    chart: "leartech-website-0.0.4"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    fabric8.io/expose: "true"
    fabric8.io/ingress.annotations: 'kubernetes.io/ingress.class: nginx'
  namespace: jx-production
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: leartech-website-leartech-website
