config-root/namespaces/jx-production/leartech-website/leartech-website-ingress.yaml
# Source: leartech-website/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: leartech-website
  namespace: jx-production
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: leartech-website
              servicePort: 80
      host: leartech-website-jx-production.leartech.tech
    - host: www.leartech.tech
      http:
        paths:
          - backend:
              serviceName: leartech-website
              servicePort: 80
    - host: leartech.tech
      http:
        paths:
          - backend:
              serviceName: leartech-website
              servicePort: 80
  tls:
    - hosts:
        - www.leartech.tech
        - leartech.tech
        - leartech-website-jx-production.leartech.tech
      secretName: "tls-leartech-tech-p"
